# AETHER

./: README.md
AETHER/: CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
AETHER/Schemas/: addon.schema.json  layout.schema.json  panel.schema.json  presets.schema.json
AETHER/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
AETHER/Source/Addons/: AetherAddonHost.cpp  AetherAddonHost.h  AetherAddonRegistry.cpp  AetherAddonRegistry.h  AetherAddonTypes.h  AetherPresetBankLoader.cpp  AetherPresetBankLoader.h  AetherRuntimeThemeState.h  AetherThemeContract.h  AetherThemeFallbackManager.cpp  AetherThemeFallbackManager.h  AetherThemeLoader.cpp  AetherThemeLoader.h  AetherThemeValidator.cpp  AetherThemeValidator.h
AETHER/Source/Core/: AetherMeterState.h  AetherParameters.h
AETHER/Source/DSP/: AetherDSPChain.cpp  AetherDSPChain.h  FormantChoirEngine.cpp  FormantChoirEngine.h  HaloEngine.cpp  HaloEngine.h  InvocationEngine.cpp  InvocationEngine.h  TempleSpace.cpp  TempleSpace.h
AETHER/Source/Presets/: AetherPresetBank.h  AetherPresetManager.cpp  AetherPresetManager.h
AETHER/Source/UI/: AetherLookAndFeel.h  AetherThemeBridge.h  MysticBackground.h
AETHER/docs/: FINAL_AUDIT.md  GUI_DIRECTION.md  PLATFORM_COMPLETION_AUDIT.md  PRODUCT_COPY.md  RELEASE_CHECKLIST.md  RUNTIME_INTEGRATION_AUDIT.md  SUITE_FIT.md
AETHER/docs/addons/: ADDON_LIFECYCLE.md  ADDON_PLATFORM.md  CREATOR_QUICKSTART.md  EDITOR_THEME_FLOW.md  FALLBACK_MATRIX.md  MARKETPLACE_GUIDE.md  SCHEMA_REFERENCE.md  SELLER_CHECKLIST.md
AETHER/scripts/: build_macos.sh  package_addon.py  validate_addon.py
